cmake_minimum_required(VERSION 3.0)
project(nanoservices)

option(ZOO "make with zoo config" ON)
include(CMakeDependentOption)
cmake_dependent_option(FILE "make with file config" OFF "ZOO" ON)

set(GLOBAL_BUILD true)

add_subdirectory(ns-skeleton)
add_subdirectory(ns-tests)
add_subdirectory(misc)

if(FILE)
	SET(CPACK_PACKAGE_NAME ${CMAKE_PROJECT_NAME}-file)
elseif(ZOO)
	SET(CPACK_PACKAGE_NAME ${CMAKE_PROJECT_NAME}-zoo)
else()
	message(FATAL_ERROR "You cmake it wrong!!")
endif(FILE)
        
SET(CPACK_GENERATOR "DEB")
SET(CPACK_PACKAGE_VENDOR "dmerkushov and Co")
SET(CPACK_PACKAGE_CONTACT "d.merkushov@gmail.com")
SET(CPACK_DEB_COMPONENT_INSTALL ON)
SET(CPACK_COMPONENTS_ALL lib dev misc)
SET(CPACK_DEBIAN_PACKAGE_SHLIBDEPS ON)
file(STRINGS "VERSION.txt" VERSION)
SET(CPACK_PACKAGE_VERSION ${VERSION})
SET(CPACK_DEBIAN_ENABLE_COMPONENT_DEPENDS ON)
SET(CPACK_COMPONENT_DEV_DEPENDS lib)
SET(CPACK_COMPONENT_MISC_DEPENDS lib)
file(STRINGS "${ns_configurator_SOURCE_DIR}/VERSION.txt" VERSION)
SET(CPACK_MISC_PACKAGE_VERSION ${VERSION})
SET(CPACK_DEBIAN_LIB_PACKAGE_ARCHITECTURE "amd64")
SET(CPACK_DEBIAN_DEV_PACKAGE_ARCHITECTURE "all")
SET(CPACK_DEBIAN_MISC_PACKAGE_ARCHITECTURE "amd64")
SET(CPACK_DEBIAN_LIB_PACKAGE_PROVIDES ${CMAKE_PROJECT_NAME})
SET(CPACK_DEBIAN_DEV_PACKAGE_PROVIDES ${CMAKE_PROJECT_NAME}-dev)
SET(CPACK_DEBIAN_MISC_PACKAGE_PROVIDES ${CMAKE_PROJECT_NAME}-misc)
SET(CPACK_COMPONENT_DEV_DESCRIPTION "Headers for nanoservices framework")
SET(CPACK_COMPONENT_LIB_DESCRIPTION "Library for nanoservices framework")
SET(CPACK_COMPONENT_MISC_DESCRIPTION "Utilites for work with nanoservices")
SET(CPACK_DEBIAN_DEV_FILE_NAME  "${CPACK_PACKAGE_NAME}-dev_${CPACK_PACKAGE_VERSION}_${CPACK_DEBIAN_DEV_PACKAGE_ARCHITECTURE}.deb")
SET(CPACK_DEBIAN_LIB_FILE_NAME  "${CPACK_PACKAGE_NAME}-lib_${CPACK_PACKAGE_VERSION}_${CPACK_DEBIAN_LIB_PACKAGE_ARCHITECTURE}.deb")
SET(CPACK_DEBIAN_MISC_FILE_NAME "${CPACK_PACKAGE_NAME}-misc_${CPACK_PACKAGE_VERSION}_${CPACK_DEBIAN_DEV_PACKAGE_ARCHITECTURE}.deb")

INCLUDE(CPack)

