cmake_minimum_required(VERSION 3.0)
project(nanoservices)

set(CMAKE_CXX_FLAGS_RELEASE -DRELEASE)

option(ZOO "make with zoo config" ON)
include(CMakeDependentOption)
cmake_dependent_option(FILE "make with file config" OFF "ZOO" ON)

set(GLOBAL_BUILD true)

file(STRINGS "VERSION.txt" VERSION)
add_definitions(-DVERSION="${VERSION}")

add_subdirectory(ns-skeleton)
add_subdirectory(misc)
add_subdirectory(ns-tests)

if(FILE)
	SET(CPACK_PACKAGE_NAME ${CMAKE_PROJECT_NAME}-file)
elseif(ZOO)
	SET(CPACK_PACKAGE_NAME ${CMAKE_PROJECT_NAME}-zoo)
else()
	message(FATAL_ERROR "Only one of FILE or ZOO must be set.")
endif(FILE)
        
SET(CPACK_GENERATOR "DEB")
SET(CPACK_PACKAGE_VENDOR "dmerkushov and Co")
SET(CPACK_PACKAGE_CONTACT "d.merkushov@gmail.com")
SET(CPACK_DEB_COMPONENT_INSTALL ON)
SET(CPACK_COMPONENTS_ALL lib dev misc)
SET(CPACK_DEBIAN_PACKAGE_SHLIBDEPS ON)
SET(CPACK_PACKAGE_VERSION ${VERSION})
SET(CPACK_DEBIAN_ENABLE_COMPONENT_DEPENDS ON)
SET(CPACK_COMPONENT_DEV_DEPENDS lib)
SET(CPACK_COMPONENT_MISC_DEPENDS lib)
SET(CPACK_DEBIAN_LIB_PACKAGE_ARCHITECTURE "amd64")
SET(CPACK_DEBIAN_DEV_PACKAGE_ARCHITECTURE "all")
SET(CPACK_DEBIAN_MISC_PACKAGE_ARCHITECTURE "amd64")
SET(CPACK_DEBIAN_LIB_PACKAGE_PROVIDES ${CMAKE_PROJECT_NAME})
SET(CPACK_DEBIAN_DEV_PACKAGE_PROVIDES ${CMAKE_PROJECT_NAME}-dev)
SET(CPACK_DEBIAN_MISC_PACKAGE_PROVIDES ${CMAKE_PROJECT_NAME}-misc)
SET(CPACK_COMPONENT_DEV_DESCRIPTION "Headers for nanoservices framework")
SET(CPACK_COMPONENT_LIB_DESCRIPTION "Library for nanoservices framework")
SET(CPACK_COMPONENT_MISC_DESCRIPTION "Utilites for work with nanoservices")
SET(CPACK_DEBIAN_DEV_FILE_NAME  DEB-DEFAULT)
SET(CPACK_DEBIAN_LIB_FILE_NAME  DEB-DEFAULT)
SET(CPACK_DEBIAN_MISC_FILE_NAME DEB-DEFAULT)

INCLUDE(CPack)

